<resources>
    <string name="app_name">VRT Tires</string>
    <string name="tread_thickness_measurement_result">Tread thickness measurement result</string>
    <string name="result_menu_tab_name">Result</string>
    <string name="advanced_menu_tab_name">Advanced</string>
    <string name="settings_menu_tab_name">Settings</string>
    <string name="settings_ip" translatable="false">IP</string>
    <string name="settings_port" translatable="false">PORT</string>
    <string name="settings_ip_hint">Enter IP address</string>
    <string name="settings_colon" translatable="false">:</string>
    <string name="settings_save_button">Save</string>
    <string name="settings_port_hint">Enter port</string>
    <string name="validation_error_incorrect_ip">Incorrect IP format</string>
    <string name="validation_error_incorrect_port">Incorrect port</string>
    <string name="settings_alert_title">Settings</string>
    <string name="settings_alert_message">Do you want to save settings?</string>
    <string name="settings_alert_cancel">Cancel</string>
    <string name="settings_alert_save">Save</string>
    <string name="advanced_tire_width">Tire width [mm]</string>
    <string name="advanced_tire_profile">Tire profile</string>
    <string name="advanced_tire_diameter">Tire diameter [inch]</string>
    <string name="advanced_tire_setting_width">Width: %d</string>
    <string name="advanced_tire_setting_profile">Profile: %d</string>
    <string name="advanced_tire_setting_diameter">Diameter: %d</string>
    <string name="advanced_submit">Submit</string>
    <string name="settings_alert_saved">Settings saved</string>
    <string name="advanced_alert_saved">Parameters submitted</string>
    <string name="advanced_alert_unsaved">Not submitted changes</string>
    <string name="settings_alert_unsaved">Unsaved changes</string>
    <string name="result_alert_connection_success">Connected.</string>
    <string name="result_alert_connection_error">Connection failed!</string>
    <string name="advanced_alert_save_failed">Failed to submit parameters</string>
</resources>
